# quanttide-collab-python

./: README.md  pyproject.toml
examples/: data.json  groupB_task1.py  task.py  topic.py
quanttide_collab/: task.py
quanttide_collab/models/: __init__.py  decision.py  plan.py  topic.py
